# spineai-backend

./: .gitignore  README.md  celerybeat-schedule.dir  production_plans.json  pyproject.toml  stage_plans.json
Extras/: chat_know.py  final_prompt.txt  gpt_test.py  new_code.py  post_diagnos_finding.txt  test_b64.py
app/: celery.py  main.py
app/api/: dependency.py
app/core/: config.py
app/db/: config.py
app/models/: base.py  chat.py  communication.py  coupon.py  feedback.py  notification.py  payment.py  payout.py  product.py  treatment_plan.py  user.py
app/schemas/: chat.py  communication.py  coupon.py  feedback.py  notification.py  payment.py  payout.py  product.py  treatment_plan.py  users.py
app/services/: email_service.py  file_processing_sernice.py  ocr_service.py  s3_bucket_service.py
app/tasks/: chat.py  product.py
app/templates/: credit_limit_notification.html  ebook_purchase.html  email_verify.html  image_credits_purchase.html  recommendation_reminder.html  reset_password.html  treatment_reminder.html
app/utils/: free_helpers.py  helpers.py
migrations/models/: 0_20250702154034_init.py  10_20250710173302_update.py  11_20250712200806_update.py  12_20250713150200_update.py  13_20250713151102_update.py  14_20250713161425_update.py  15_20250713173659_update.py  16_20250719220225_update.py  17_20250720212819_update.py  18_20250721003422_update.py  19_20250721093656_update.py  1_20250703121921_update.py  20_20250722025354_update.py  21_20250729191256_update.py  22_20250730210715_update.py  23_20250731022445_update.py  24_20250815162814_update.py  25_20250815222637_update.py  26_20250815222714_update.py  27_20250816185518_update.py  28_20250816185610_update.py  29_20250824191849_update.py  30_20250824192048_update.py  31_20250824203308_update.py  32_20250824215037_update.py  33_20250824235219_update.py  34_20250825003446_update.py  35_20250825011318_update.py  36_20250825153600_update.py  37_20250825191147_update.py  3_20250708014105_update.py  4_20250709185405_update.py  5_20250709212403_update.py  6_20250710011522_update.py  7_20250710065747_update.py  8_20250710082346_update.py  (+1 more)
(+16 files in other folders)
